# 2222

./: .gitignore  BUILD_ERRORS_FIXED.md  BUILD_FIXES.md  Cargo.toml  DEPLOY.md  FIX_ADMIN_ROLE.md  FIX_LIFETIME.md  MEMORY.md  README.md  UPGRADE_COMPLETE.md  build.rs  build.sh  config.json  gitignore
.github/workflows/: build.yml
.real/: project.json
github/workflows/: build.yml
memory/: 2026-04-02.md
src/: config.rs  main.rs
src/api/: admin.rs  auth.rs  config.rs  detail.rs  favorites.rs  health.rs  mod.rs  play.rs  playrecords.rs  search.rs  tvbox.rs  user.rs
src/db/: mod.rs
src/models/: mod.rs
src/utils/: crypto.rs  http.rs  mod.rs
static/: index.html
static/css/: style.css
static/js/: app.js
