[package]
name = "moontv"
version = "0.1.0"
edition = "2021"

[lib]
name = "moontv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "moontv"
path = "src/main.rs"

[build-dependencies]

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
hyper = "1.3"
http-body = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
base64 = "0.22"
regex = "1.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dirs = "5.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"